# Terrim

./: CMakeLists.txt  README.md
include/: cstring.h  format.h  header.h  pixels.h  tiles.h
src/: cstring.c  format.c  header.c  lodepng.c  main.c  pixels.c  tiles.c
